samples/_failures_safe/1761413315_9fa897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f745f366.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f745f366.c:140:5: error: expected declaration or statement at end of input
  140 |     free(dist);
      |     ^~~~
